# swarm-genesis

./: .gitignore  COMPUTE_SETTLEMENT_LAYER.md  EPOCH_0.md  MANIFESTO.md  README.md  SWARMPOOL_ARCHITECTURE.md  e2e_test_1hr.py
bee/bumble70b/: README.md  RECEIPT_001.md  RECEIPT_001.sig  bee_key.pub  card.html  docker-compose.yml  ens_records.json  identity.json  prometheus.yml  pubkey
bee/bumble70b/grafana/: dashboard.json
bee/bumble70b/grafana/provisioning/dashboards/: default.yml
bee/bumble70b/systemd/: swarmbee-worker.service
bee/bumble70b/worker/: __init__.py  alerts.py  config.py  metrics.py  receipts.py  requirements.txt  worker.py
data/outputs/: live-20251231-00009_report.html  live-20251231-00010_report.html  live-20251231-00011_report.html  live-20251231-00012_report.html  live-20251231-00013_report.html  live-20251231-00014_report.html  live-20251231-00015_report.html  live-20251231-00016_report.html  live-20251231-00017_report.html  live-20251231-00018_report.html  live-20251231-00019_report.html  live-20251231-00020_report.html  live-20251231-00021_report.html
docs/: CLI.md  POOL_LAYOUT.md  SIGNING.md
epochs/0001/: epoch.json
orb/prompts/: ingest_swarmpool_genesis.txt
schemas/bee-23/: claim.schema.json  epoch.seal.schema.json  genesis.miner.schema.json  proof.schema.json
swarmbee-cli/: LICENSE  README.md  pyproject.toml
swarmbee-cli/docker/: Dockerfile  requirements.txt
swarmbee-cli/docker/worker/: __init__.py  main.py
swarmbee-cli/swarmbee/: __init__.py  cli.py
swarmhive-cli/: Cargo.toml
swarmhive-cli/src/: cli.rs  config.rs  ipfs.rs  main.rs  signing.rs
swarmhive-cli/src/commands/: claim.rs  init.rs  mod.rs  prove.rs  seal.rs  submit.rs  watch.rs
swarmpool-landing/: package-lock.json  package.json
swarmpool-landing/public/data/: state.json
swarmpool-landing/src/components/: EpochHistory.tsx  JobQueue.tsx  LiveStats.tsx  MinerTable.tsx
swarmpool-landing/src/layouts/: Layout.astro
swarmpool-landing/src/lib/: pool.ts  types.ts
swarmpool-landing/src/pages/: docs.astro  epochs.astro  index.astro  miners.astro
swarmpool-landing/src/styles/: global.css
system-test/swarmorb-full/swarmorb/: Makefile  README.md
system-test/swarmorb-full/swarmorb/apps/orb-indexer/: pyproject.toml
system-test/swarmorb-full/swarmorb/apps/orb-indexer/orb_indexer/: __init__.py  __main__.py  indexer.py
system-test/swarmorb-full/swarmorb/apps/orb-ui/: package-lock.json  package.json  tailwind.config.cjs
system-test/swarmorb-full/swarmorb/apps/orb-ui/src/layouts/: Base.astro
system-test/swarmorb-full/swarmorb/apps/orb-ui/src/lib/: data.ts
system-test/swarmorb-full/swarmorb/docs/: DEPLOYMENT.md
system-test/swarmorb-full/swarmorb/sample_data/audit/epoch-001/: SIGNATURE.txt  SUMMARY.json
system-test/swarmorb-full/swarmorb/sample_data/orb/: index.json  live.json
system-test/swarmorb-full/swarmorb/schemas/: epoch.schema.json  index.schema.json  live.schema.json  summary.schema.json
(+9 files in other folders)
