[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmbee"
version = "1.0.0"
description = "Join the SwarmOS sovereign compute network"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SudoHash LLC", email = "dev@sudohash.com"}
]
keywords = ["gpu", "compute", "ai", "medical", "inference", "ethereum", "ens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
swarmbee = "swarmbee.cli:cli"

[project.urls]
Homepage = "https://swarmbee.eth.limo"
Documentation = "https://docs.swarmos.eth.limo"
Repository = "https://github.com/sudohash/swarmbee-cli"
Issues = "https://github.com/sudohash/swarmbee-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmbee*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
