[package]
name = "swarmhive"
version = "0.1.0"
edition = "2021"
description = "SwarmHive sovereign compute CLI"
license = "MIT"
repository = "https://github.com/SudoSuOps/swarm-genesis"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Crypto
ethers = { version = "2.0", features = ["legacy"] }
hex = "0.4"

# Time / utils
chrono = "0.4"
anyhow = "1.0"

# Async
tokio = { version = "1.37", features = ["full"] }

# Schema validation
jsonschema = "0.18"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
