[project]
name = "orb-indexer"
version = "1.0.0"
description = "SwarmOrb Indexer - Build index.json from audit epochs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[project.scripts]
orb-indexer = "orb_indexer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orb_indexer"]
